# openmetadata-omctl

./: README.md  __init__.py  client.py  config.py  formatters.py  main.py  pyproject.toml
commands/: config_cmd.py  describe_cmd.py  get_cmd.py  lineage_cmd.py  quality_cmd.py  search_cmd.py  tag_cmd.py
